@@ -1,3 +1,7 @@
+2002-03-01 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* user_home.c: Port to MINGW
+
 2002-02-28  Adam Fedor  <fedor@gnu.org>
 
 	* target.make (darwin5): Correct compile flags. Add
